--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ document.addEventListener("pjax:success", initScrollReveal);
   </script><link rel="stylesheet" href="/css/hexo-theme-yun.css"><script src="/js/hexo-theme-yun.js" type="module"></script><meta name="description" content="为了防止你一无所获，这里教你怎么做我爱吃的西红柿炒鸡蛋1&#x2F;9准备两个西红柿，选择红透的，熟透的，洗干净，再准备两个鸡蛋 2&#x2F;9把准备好的两个西红柿切成丁，（倒入开水浸泡2分钟，让番茄在热水里翻滚一会；这样可以轻松去掉番茄的外皮，去皮吃的时候很方便，不去皮不但外观好看，而且会更加有营养） 3&#x2F;9把鸡蛋打到碗里，加适量的盐打散（可以少量加水，加水后的鸡蛋会发白，更加吃油）">
 <meta property="og:type" content="website">
 <meta property="og:title" content="你掉进虚空啦！| Welcome to The Void！">
-<meta property="og:url" content="http://jaymushui.github.io/404.html">
+<meta property="og:url" content="https://jaymushui.github.io/404.html">
 <meta property="og:site_name" content="MuYi Pavilion | 沐佚苑阁">
 <meta property="og:description" content="为了防止你一无所获，这里教你怎么做我爱吃的西红柿炒鸡蛋1&#x2F;9准备两个西红柿，选择红透的，熟透的，洗干净，再准备两个鸡蛋 2&#x2F;9把准备好的两个西红柿切成丁，（倒入开水浸泡2分钟，让番茄在热水里翻滚一会；这样可以轻松去掉番茄的外皮，去皮吃的时候很方便，不去皮不但外观好看，而且会更加有营养） 3&#x2F;9把鸡蛋打到碗里，加适量的盐打散（可以少量加水，加水后的鸡蛋会发白，更加吃油）">
 <meta property="og:locale" content="zh_CN">
