--- a/about/site.html
+++ b/about/site.html
@@ -11,7 +11,7 @@ document.addEventListener("pjax:success", initScrollReveal);
   </script><link rel="stylesheet" href="/css/hexo-theme-yun.css"><script src="/js/hexo-theme-yun.js" type="module"></script><meta name="description" content="要不下次再写吧，已经写累了历史2024.06.14 重新开始构建博客 2021年暑假，第一次尝试使用Hexo制作博客，当时学识不够，即使对着技术文档也bug满天飞（待修改）">
 <meta property="og:type" content="website">
 <meta property="og:title" content="About Site">
-<meta property="og:url" content="http://jaymushui.github.io/about/site.html">
+<meta property="og:url" content="https://jaymushui.github.io/about/site.html">
 <meta property="og:site_name" content="MuYi Pavilion | 沐佚苑阁">
 <meta property="og:description" content="要不下次再写吧，已经写累了历史2024.06.14 重新开始构建博客 2021年暑假，第一次尝试使用Hexo制作博客，当时学识不够，即使对着技术文档也bug满天飞（待修改）">
 <meta property="og:locale" content="zh_CN">
